--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
   <body>
-    HI, I'm Mervin!
+    <span class="type-it"></span>
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typeit@4.4.1/dist/typeit.min.js"></script>
+  <script>
+      $('.type-it').typeIt({
+        strings: ["Hi! I'm Mervin", 'Another string!']
+      });
+  </script>
 </htlm>
